<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog" >
    <TextView 
        android:id="@+id/tv_dialog_seat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center">
	    <EditText 
	        android:id="@+id/et_dialog_seat_phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/et_bg_dialog_input"
	        android:hint="@string/hint_input"
	        android:textColorHint="@color/hint_color"
	        android:textSize="18sp"
	        android:textColor="@color/black_alpha_ee"
	        android:inputType="phone"
	        android:maxLength="11"/>
    </LinearLayout>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip"
	    android:paddingLeft="5dip"
	    android:paddingRight="5dip">
	    <Button 
	        android:id="@+id/btn_dialog_seat_negative"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginRight="8dip"
	        android:background="@drawable/selector_dialog_nagetive_btn"
	        android:text="@string/cancel"
	        android:textColor="@color/white_alpha_de"
	        android:textSize="20sp"/>
	    <Button 
	        android:id="@+id/btn_dialog_seat_positive"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="8dip"
	        android:background="@drawable/selector_dialog_positive_btn"
	        android:text="@string/search"
	        android:textColor="@color/white_alpha_de"
	        android:textSize="20sp"/>
	</LinearLayout>
</LinearLayout>
