<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_bg2" >
    
    <com.yuninfo.footballapp.widget.TitleBar2
        android:id="@+id/tb_integral_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/integral_search_result_body_marging"
        android:background="@drawable/grass_bg2"
        android:orientation="vertical">
        <LinearLayout 
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/integral_search_result_card_marging_vertical"
	        android:layout_marginLeft="@dimen/integral_search_result_card_marging_horizontal"
	        android:layout_marginRight="@dimen/integral_search_result_card_marging_horizontal"
	        android:background="@drawable/vip_card_up">
	        <TextView 
	            style="@style/IntegralSearchResultCardText"
	            android:id="@+id/tv_integral_search_result_card_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView 
	            style="@style/IntegralSearchResultCardText"
	            android:id="@+id/tv_integral_search_result_card_vip_card"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/integral_search_result_card_text_marging" />
	        <TextView 
	            style="@style/IntegralSearchResultCardText"
	            android:id="@+id/tv_integral_search_result_card_idcard"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/integral_search_result_card_text_marging" />
	        <TextView 
	            style="@style/IntegralSearchResultCardText"
	            android:id="@+id/tv_integral_search_result_total"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="@dimen/integral_search_result_card_text_marging" />
	    </LinearLayout>
		<TextView 
		    style="@style/IntegeralSearchResultSetText"
		    android:id="@+id/tv_integral_search_result_card_seat"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/integral_search_result_card_marging_horizontal"
	        android:layout_marginRight="@dimen/integral_search_result_card_marging_horizontal"
	        android:layout_marginBottom="@dimen/integral_search_result_card_marging_vertical"
		    android:background="@drawable/vip_card_down" />
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/table_title_bg"
	        android:gravity="center_vertical"
	        android:orientation="horizontal"
	        android:layout_marginBottom="@dimen/competition_count_title_marging_bottom" >
	
	        <TextView
	            style="@style/TableTitleText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="10"
	            android:text="@string/score_date" />
	
	        <TextView
	            style="@style/TableTitleText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="10"
	            android:text="@string/score_type" />
	
	        <TextView
	            style="@style/TableTitleText"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="13"
	            android:text="@string/score" />
	    </LinearLayout>
		<ListView 
		    android:id="@+id/lv_integral_search_result_list"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:scrollbars="vertical"
		    android:cacheColorHint="@color/transparent"
		    android:listSelector="@color/transparent"
	    	android:fadingEdge="none"
		    android:divider="@color/transparent"
		    android:dividerHeight="@dimen/competition_count_divider_height" />
    </LinearLayout>
    
</LinearLayout>
